--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,9 +1,11 @@
-<h1>Client</h1>
+<app-nav></app-nav>
 
-<ul>
-  @for (user of users; track user.id) {
-  <li>
-    {{user.id}} - {{ user.userName }}
-  </li>
-  }
-</ul>
+<div class="container mt-5">
+  <ul>
+    @for (user of users; track user.id) {
+    <li>
+      {{user.id}} - {{ user.userName }}
+    </li>
+    }
+  </ul>
+</div>
