--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -7,7 +7,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                @if (loggedIn) {
+                @if (accountService.currentUser()) {
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Matches</a>
                 </li>
@@ -21,7 +21,7 @@
             </ul>
 
 
-            @if (loggedIn) {
+            @if (accountService.currentUser()) {    
             <div dropdown class="dropdown">
                 <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome User</a>
                 <div *dropdownMenu="" class="dropdown-menu">
@@ -32,7 +32,7 @@
             </div>
             }
 
-            @if (!loggedIn) {
+            @if (!accountService.currentUser()) {
             <form #loginForm="ngForm" (ngSubmit)="login()" class="d-flex" autocomplete="off">
                 <input name="userName" [(ngModel)]="model.userName" class="form-control me-2" type="text"
                     placeholder="Username">
