--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark mb-15px">
     <div class="container">
-        <a class="navbar-brand" href="#">Tiner</a>
+        <a routerLink="/" class="navbar-brand">Tiner</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -9,13 +9,13 @@
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 @if (accountService.currentUser()) {
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Matches</a>
+                    <a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Others Tiners</a>
+                    <a class="nav-link" routerLink="/lists" routerLinkActive="active">Others Tiners</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Messages</a>
+                    <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
                 </li>
                 }
             </ul>
