--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                 <div class="row justify-content-center">
                     <div class="col-4">
                         <p>Let's us know who you are!</p>
-                        <app-register [usersFromHomeComponent]="users" (cancelRegister)="cancelRegisterMode($event)"></app-register>
+                        <!-- <app-register [usersFromHomeComponent]="users" (cancelRegister)="cancelRegisterMode($event)"></app-register> -->
                     </div>
                 </div>
             </div>
