--- a/client/src/app/members/tiner-list/tiner-list.component.html
+++ b/client/src/app/members/tiner-list/tiner-list.component.html
@@ -1,1 +1,9 @@
-<p>tiner-list works!</p>
+<div class="row">
+    
+    @for (tiner of tiners; track tiner.id) {
+        <div class="col-2">
+            <app-member-card [tiner]="tiner"></app-member-card>
+        </div>
+    }
+
+</div>
