--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,9 +1,9 @@
 <div class="card mb-3">
     <div class="card-img-wrapper">
-        <img src="{{tiner().photoUrl}}" alt="{{tiner().knownAs}}" class="card-img-top">
+        <img src="{{tiner.photoUrl}}" alt="{{tiner.knownAs}}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
-                <button class="btn btn-primary"><i class="fa fa-user"></i></button>
+                <button [routerLink]="['/members', tiner.userName]" class="btn btn-primary"><i class="fa fa-user"></i></button>
             </li>
 
             <li class="list-inline-item">
@@ -19,8 +19,8 @@
     <div class="card-body p-2">
         <h6 class="card-title text-center mb-2">
             <i class="fa fa-user me-2"></i>
-            {{tiner().knownAs}}
+            {{tiner.knownAs}}
         </h6>
-        <p class="text-center text-muted card-text">{{tiner().city}}</p>
+        <p class="text-center text-muted card-text">{{tiner.city}}</p>
     </div>
 </div>
