--- a/client/src/app/members/tiner-detail/tiner-detail.component.html
+++ b/client/src/app/members/tiner-detail/tiner-detail.component.html
@@ -42,8 +42,10 @@
                     <h4>Interests</h4>
                     <p>{{tiner.interests}}</p>
                 </tab>
-                <tab heading="Photos">
-                    <p>Photos</p>
+                <tab heading="Photos" #photoTab="tab">
+                    @if (photoTab.active) {
+                        <gallery [items]="images" class="gallery"></gallery>
+                    }
                 </tab>
                 <tab heading="Messages">
                     <p>Messages</p>
