--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -25,7 +25,7 @@
             <div dropdown class="dropdown">
                 <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome {{accountService.currentUser()?.username| titlecase}}</a>
                 <div *dropdownMenu="" class="dropdown-menu">
-                    <a class="dropdown-item text-dark">Manage Profile</a>
+                    <a class="dropdown-item text-dark" routerLink="/member/edit">Manage Profile</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item text-dark" (click)="logout()">Logout</a>
                 </div>
