implement update profile function

--- a/client/src/app/members/tiner-detail/tiner-detail.component.html
+++ b/client/src/app/members/tiner-detail/tiner-detail.component.html
@@ -16,7 +16,7 @@
                         <strong>Last Active:</strong> {{ tiner.lastActive }}
                     </p>
                     <p class="card-text">
-                        <strong>Joined Tiner since:</strong> {{ tiner.created }}
+                        <strong>Joined Tiner since:</strong> {{ tiner.createdOn }}
                     </p>
                 </div>
                 <div class="card-footer text-center">
