--- a/client/src/app/members/tiner-edit/tiner-edit.component.html
+++ b/client/src/app/members/tiner-edit/tiner-edit.component.html
@@ -1,3 +1,71 @@
 @if (tiner) {
-    <h1>{{tiner.userName}}</h1>
+<div class="row">
+    <div class="col-md-4 text-center">
+        <h1>Your profile</h1>
+    </div>
+
+    <div class="col-md-8">
+        @if (editForm.dirty) {
+            <div class="alert alert-info">
+                <p class="m-0"><strong>Information: </strong> Make sure you saved your changes!</p>
+            </div>    
+        }
+    </div>
+
+    <div class="col-md-4"> 
+        <div class="card mb-3">
+            <img [src]="tiner.photoUrl || './assets/user.png'" alt="{{tiner.knownAs}}"
+                class="card-img-top img-thumbnail w-75 mx-auto mt-3">
+            <div class="card-body">
+                <h5 class="card-title">{{ tiner.knownAs }}</h5>
+                <p class="card-text">
+                    <strong>Location:</strong> {{ tiner.city }}, {{ tiner.country }}
+                </p>
+                <p class="card-text">
+                    <strong>Age:</strong> {{ tiner.age }}
+                </p>
+                <p class="card-text">
+                    <strong>Last Active:</strong> {{ tiner.lastActive }}
+                </p>
+                <p class="card-text">
+                    <strong>Joined Tiner since:</strong> {{ tiner.createdOn }}
+                </p>
+            </div>
+            <div class="card-footer text-center">
+                <button type="submit" [disabled]="!editForm.dirty" form="editForm" class="btn btn-success col-12">Update</button>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-7">
+        <tabset class="tiner-tabs">
+            <tab heading="About {{tiner.knownAs}}">
+                <div class="bg-white">
+                    <form id="editForm" #editForm="ngForm" (ngSubmit)="update()">
+                        <h4 class="mt-3">Description</h4>
+                        <textarea class="form-control" name="introduction" [(ngModel)]="tiner.introduction">
+                        </textarea>
+                        <h4 class="mt-3">Looking for</h4>
+                        <textarea class="form-control" name="lookingFor" [(ngModel)]="tiner.lookingFor">
+                        </textarea>
+                        <h4 class="mt-3">Interest</h4>
+                        <textarea class="form-control" name="interests" [(ngModel)]="tiner.interests">
+                        </textarea>
+
+                        <h4 class="mt-3">You come from</h4>
+                        <div class="d-flex align-items-center">
+                            <label for="">City:</label>
+                            <input class="form-control mx-2" type="text" [(ngModel)]="tiner.city" name="city">
+                            <label for="">Country:</label>
+                            <input class="form-control mx-2" type="text" [(ngModel)]="tiner.country" name="country">
+                        </div>
+                    </form>
+                </div>
+            </tab>
+            <tab heading="Edit photos">
+                <h4>Interests</h4>
+            </tab>
+        </tabset>
+    </div>
+</div>
 }
