--- a/client/src/app/members/tiner-edit/tiner-edit.component.html
+++ b/client/src/app/members/tiner-edit/tiner-edit.component.html
@@ -63,7 +63,7 @@
                 </div>
             </tab>
             <tab heading="Edit photos">
-                <h4>Interests</h4>
+                <app-photo-editor [tiner]="tiner" (tinerChange)="onTinerChange($event)"></app-photo-editor>
             </tab>
         </tabset>
     </div>
