--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -23,6 +23,7 @@
 
             @if (accountService.currentUser()) {    
             <div dropdown class="dropdown">
+                <img src="{{accountService.currentUser()?.photoUrl || './assets/user.png'}}" alt="user avatar" class="me-2">
                 <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">Welcome {{accountService.currentUser()?.username| titlecase}}</a>
                 <div *dropdownMenu="" class="dropdown-menu">
                     <a class="dropdown-item text-dark" routerLink="/member/edit">Manage Profile</a>
