--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -1,6 +1,6 @@
 <div class="card mb-3">
     <div class="card-img-wrapper">
-        <img src="{{tiner.photoUrl}}" alt="{{tiner.knownAs}}" class="card-img-top">
+        <img [src]="tiner.photoUrl || './assets/user.png'" alt="{{tiner.knownAs}}" class="card-img-top">
         <ul class="list-inline member-icons animate text-center">
             <li class="list-inline-item">
                 <button [routerLink]="['/members', tiner.userName]" class="btn btn-primary"><i class="fa fa-user"></i></button>
