--- a/client/src/app/members/tiner-list/tiner-list.component.html
+++ b/client/src/app/members/tiner-list/tiner-list.component.html
@@ -1,9 +1,18 @@
 <div class="row">
-    
-    @for (tiner of tinerService.tiners(); track tiner.id) {
+
+    @for (tiner of tinerService.paginatedResult()?.items; track tiner.id) {
         <div class="col-2">
             <app-member-card [tiner]="tiner"></app-member-card>
         </div>
     }
-
 </div>
+
+@if (tinerService.paginatedResult()?.pagination) {
+    <div class="d-flex justify-content-center">
+        <pagination [boundaryLinks]="true" [totalItems]="tinerService.paginatedResult()?.pagination!.totalCount"
+            [itemsPerPage]="tinerService.paginatedResult()?.pagination!.pageSize"
+            (pageChanged)="pagedChanged($event)" [maxSize]="10" previousText="&lsaquo;" nextText="&rsaquo;"
+            firstText="&laquo;" lastText="&raquo;">
+        </pagination>
+    </div>
+}
