--- a/client/src/app/members/tiner-list/tiner-list.component.html
+++ b/client/src/app/members/tiner-list/tiner-list.component.html
@@ -1,18 +1,78 @@
 <div class="row">
+    <!-- Header -->
+    <div class="text-center mt-3">
+        <h2>Your matches - {{ tinerService.paginatedResult()?.pagination?.totalCount }}</h2>
+    </div>
 
+    <!-- Filter Form -->
+    <div class="col-12 mt-3">
+        <form #form="ngForm" class="row g-3 align-items-center mb-3" (ngSubmit)="loadTiners()">
+            <!-- Age From -->
+            <div class="col-2 d-flex flex-row align-items-center">
+                <label for="minAge" class="form-label col-6">Age from:</label>
+                <input type="number" id="minAge" style="width: auto;" class="form-control col-6" name="minAge" [(ngModel)]="userParams.minAge"
+                    min="18" max="99" />
+            </div>
+
+            <!-- Age To -->
+            <div class="col-2 d-flex flex-row align-items-center">
+                <label for="maxAge" class="form-label col-6">Age to:</label>
+                <input type="number" id="maxAge" style="width: auto;" class="form-control" name="maxAge" [(ngModel)]="userParams.maxAge"
+                    min="18" max="99" />
+            </div>
+
+            <!-- Gender Filter -->
+            <div class="col-2 d-flex flex-row align-items-center">
+                <label for="gender" class="form-label col-4">Show:</label>
+                <select id="gender" name="gender" class="form-select" [(ngModel)]="userParams.gender">
+                    @for (gender of genderList; track gender.value) {
+                    <option [value]="gender.value">
+                        {{ gender.display }}
+                    </option>
+                    }
+                </select>
+            </div>
+
+            <!-- Apply Filter Button -->
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary">Apply filter</button>
+            </div>
+
+            <!-- Reset Filter Button -->
+            <div class="col-auto">
+                <button type="button" class="btn btn-info" (click)="resetFilters()">Reset filter</button>
+            </div>
+
+            <!-- Filter By LastActive Button -->
+            <div class="col-auto">
+                <div class="btn-group">
+                    <button type="button" class="btn btn-primary" name="orderBy" (click)="loadTiners()" btnRadio="lastActive"
+                        [(ngModel)]="userParams.orderBy">
+                        Last Active
+                    </button>
+                    <button type="button" class="btn btn-primary" name="orderBy" (click)="loadTiners()" btnRadio="createdOn"
+                        [(ngModel)]="userParams.orderBy">
+                        New Joiner
+                    </button>
+                </div>
+            </div>
+        </form>
+    </div>
+
+    <!-- Tiner Cards -->
     @for (tiner of tinerService.paginatedResult()?.items; track tiner.id) {
-        <div class="col-2">
-            <app-member-card [tiner]="tiner"></app-member-card>
-        </div>
+    <div class="col-md-2">
+        <app-member-card [tiner]="tiner"></app-member-card>
+    </div>
     }
-</div>
 
-@if (tinerService.paginatedResult()?.pagination) {
-    <div class="d-flex justify-content-center">
+    <!-- Pagination -->
+    @if (tinerService.paginatedResult()?.pagination) {
+    <div class="d-flex justify-content-center mt-4">
         <pagination [boundaryLinks]="true" [totalItems]="tinerService.paginatedResult()?.pagination!.totalCount"
-            [itemsPerPage]="tinerService.paginatedResult()?.pagination!.pageSize"
-            (pageChanged)="pagedChanged($event)" [maxSize]="10" previousText="&lsaquo;" nextText="&rsaquo;"
-            firstText="&laquo;" lastText="&raquo;">
+            [itemsPerPage]="tinerService.paginatedResult()?.pagination!.pageSize" (pageChanged)="pagedChanged($event)"
+            [maxSize]="10" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
         </pagination>
     </div>
-}
+    }
+</div>
