--- a/client/src/app/members/tiner-list/tiner-list.component.html
+++ b/client/src/app/members/tiner-list/tiner-list.component.html
@@ -10,21 +10,21 @@
             <!-- Age From -->
             <div class="col-2 d-flex flex-row align-items-center">
                 <label for="minAge" class="form-label col-6">Age from:</label>
-                <input type="number" id="minAge" style="width: auto;" class="form-control col-6" name="minAge" [(ngModel)]="userParams.minAge"
+                <input type="number" id="minAge" style="width: auto;" class="form-control col-6" name="minAge" [(ngModel)]="tinerService.userParams().minAge"
                     min="18" max="99" />
             </div>
 
             <!-- Age To -->
             <div class="col-2 d-flex flex-row align-items-center">
                 <label for="maxAge" class="form-label col-6">Age to:</label>
-                <input type="number" id="maxAge" style="width: auto;" class="form-control" name="maxAge" [(ngModel)]="userParams.maxAge"
+                <input type="number" id="maxAge" style="width: auto;" class="form-control" name="maxAge" [(ngModel)]="tinerService.userParams().maxAge"
                     min="18" max="99" />
             </div>
 
             <!-- Gender Filter -->
             <div class="col-2 d-flex flex-row align-items-center">
                 <label for="gender" class="form-label col-4">Show:</label>
-                <select id="gender" name="gender" class="form-select" [(ngModel)]="userParams.gender">
+                <select id="gender" name="gender" class="form-select" [(ngModel)]="tinerService.userParams().gender">
                     @for (gender of genderList; track gender.value) {
                     <option [value]="gender.value">
                         {{ gender.display }}
@@ -47,11 +47,11 @@
             <div class="col-auto">
                 <div class="btn-group">
                     <button type="button" class="btn btn-primary" name="orderBy" (click)="loadTiners()" btnRadio="lastActive"
-                        [(ngModel)]="userParams.orderBy">
+                        [(ngModel)]="tinerService.userParams().orderBy">
                         Last Active
                     </button>
                     <button type="button" class="btn btn-primary" name="orderBy" (click)="loadTiners()" btnRadio="createdOn"
-                        [(ngModel)]="userParams.orderBy">
+                        [(ngModel)]="tinerService.userParams().orderBy">
                         New Joiner
                     </button>
                 </div>
@@ -71,6 +71,7 @@
     <div class="d-flex justify-content-center mt-4">
         <pagination [boundaryLinks]="true" [totalItems]="tinerService.paginatedResult()?.pagination!.totalCount"
             [itemsPerPage]="tinerService.paginatedResult()?.pagination!.pageSize" (pageChanged)="pagedChanged($event)"
+            [(ngModel)]="tinerService.paginatedResult()?.pagination!.currentPage"
             [maxSize]="10" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
         </pagination>
     </div>
