--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -7,7 +7,7 @@
             </li>
 
             <li class="list-inline-item">
-                <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+                <button (click)="toggleMatch()" class="btn btn-primary"><i class="fa fa-heart"></i></button>
             </li>
 
             <li class="list-inline-item">
@@ -19,7 +19,10 @@
     <div class="card-body p-2">
         <h6 class="card-title text-center mb-2">
             <i class="fa fa-user me-2"></i>
-            {{tiner.knownAs}}
+            {{tiner.knownAs}}, {{tiner.age}}
+            @if (hasMatched()) {
+                <i class="fa fa-heart ms-2" style="color: red;"></i>
+            }
         </h6>
         <p class="text-center text-muted card-text">{{tiner.city}}</p>
     </div>
