fix conflict between pagination and filter

--- a/client/src/app/members/tiner-list/tiner-list.component.html
+++ b/client/src/app/members/tiner-list/tiner-list.component.html
@@ -6,7 +6,7 @@
 
     <!-- Filter Form -->
     <div class="col-12 mt-3">
-        <form #form="ngForm" class="row g-3 align-items-center mb-3" (ngSubmit)="loadTiners()">
+        <form #form="ngForm" class="row g-3 align-items-center mb-3" (ngSubmit)="applyFilter()">
             <!-- Age From -->
             <div class="col-2 d-flex flex-row align-items-center">
                 <label for="minAge" class="form-label col-6">Age from:</label>
