--- a/client/src/app/members/tiner-detail/tiner-detail.component.html
+++ b/client/src/app/members/tiner-detail/tiner-detail.component.html
@@ -1,56 +1,55 @@
-@if (tiner) {
-    <div class="row">
-        <div class="col-md-4">
-            <div class="card mb-3">
-                <img [src]="tiner.photoUrl || './assets/user.png'" [alt]="tiner.knownAs"
-                    class="card-img-top img-thumbnail w-75 mx-auto mt-3">
-                <div class="card-body">
-                    <h5 class="card-title">{{ tiner.knownAs }}</h5>
-                    <p class="card-text">
-                        <strong>Location:</strong> {{ tiner.city }}, {{ tiner.country }}
-                    </p>
-                    <p class="card-text">
-                        <strong>Age:</strong> {{ tiner.age }}
-                    </p>
-                    <p class="card-text">
-                        <strong>Last Active:</strong> {{ tiner.lastActive | timeago}}
-                    </p>
-                    <p class="card-text">
-                        <strong>Joined Tiner since:</strong> {{ tiner.createdOn | date: 'dd MMM yyyy' }}
-                    </p>
-                </div>
-                <div class="card-footer text-center">
-                    <div class="btn-group">
-                        <button class="btn btn-primary"><i class="fa fa-thumbs-up"></i> Like</button>
-                        <button class="btn btn-success"><i class="fa fa-envelope"></i> Message</button>
-                    </div>
+<div class="row">
+    <div class="col-md-4">
+        <div class="card mb-3">
+            <img [src]="tiner.photoUrl || './assets/user.png'" [alt]="tiner.knownAs"
+                class="card-img-top img-thumbnail w-75 mx-auto mt-3">
+            <div class="card-body">
+                <h5 class="card-title">{{ tiner.knownAs }}</h5>
+                <p class="card-text">
+                    <strong>Location:</strong> {{ tiner.city }}, {{ tiner.country }}
+                </p>
+                <p class="card-text">
+                    <strong>Age:</strong> {{ tiner.age }}
+                </p>
+                <p class="card-text">
+                    <strong>Last Active:</strong> {{ tiner.lastActive | timeago}}
+                </p>
+                <p class="card-text">
+                    <strong>Joined Tiner since:</strong> {{ tiner.createdOn | date: 'dd MMM yyyy' }}
+                </p>
+            </div>
+            <div class="card-footer text-center">
+                <div class="btn-group">
+                    <button class="btn btn-primary"><i class="fa fa-thumbs-up"></i> Like</button>
+                    <button class="btn btn-success" (click)="selectTab('Messages')"><i class="fa fa-envelope"></i>
+                        Message</button>
                 </div>
             </div>
         </div>
-
-        <div class="col-7">
-            <tabset class="tiner-tabs">
-                <tab heading="About {{tiner.knownAs}}">
-                    <div class="bg-white">
-                        <h4>Description</h4>
-                        <p>{{tiner.introduction}}</p>
-                        <h4>Looking for</h4>
-                        <p>{{tiner.lookingFor}}</p>
-                    </div>
-                </tab>
-                <tab heading="Interests">
-                    <h4>Interests</h4>
-                    <p>{{tiner.interests}}</p>
-                </tab>
-                <tab heading="Photos" #photoTab="tab">
-                    @if (photoTab.active) {
-                        <gallery [items]="images" [itemAutosize]="true" class="gallery"></gallery>
-                    }
-                </tab>
-                <tab heading="Messages">
-                    <p>Messages</p>
-                </tab>
-            </tabset>
-        </div>
     </div>
-}
+
+    <div class="col-7">
+        <tabset class="tiner-tabs" #tinerTabs>
+            <tab heading="About {{tiner.knownAs}}" (selectTab)="onActivatedTab($event)">
+                <div class="bg-white">
+                    <h4>Description</h4>
+                    <p>{{tiner.introduction}}</p>
+                    <h4>Looking for</h4>
+                    <p>{{tiner.lookingFor}}</p>
+                </div>
+            </tab>
+            <tab heading="Interests" (selectTab)="onActivatedTab($event)">
+                <h4>Interests</h4>
+                <p>{{tiner.interests}}</p>
+            </tab>
+            <tab heading="Photos" #photoTab="tab" (selectTab)="onActivatedTab($event)">
+                @if (photoTab.active) {
+                <gallery [items]="images" [itemAutosize]="true" class="gallery"></gallery>
+                }
+            </tab>
+            <tab heading="Messages" (selectTab)="onActivatedTab($event)">
+                <app-tiner-messages [username]="tiner.userName" [messes]="messes" (outComingMess)="onUpdateMess($event)"></app-tiner-messages>
+            </tab>
+        </tabset>
+    </div>
+</div>
