--- a/client/src/app/members/member-card/member-card.component.css
+++ b/client/src/app/members/member-card/member-card.component.css
@@ -33,3 +33,17 @@
 .animate {
     transition: all 0.6s ease-in-out;
 }
+
+@keyframes fa-blink {
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0.5;
+    }
+}
+
+.is-online {
+    animation: fa-blink 2s linear infinite;
+    color: green;
+}
