implement UnitOfWork and ultilize message tab

--- a/client/src/app/members/tiner-messages/tiner-messages.component.html
+++ b/client/src/app/members/tiner-messages/tiner-messages.component.html
@@ -1,6 +1,6 @@
 <div class="card shadow-sm">
     <!-- Card Body -->
-    <div class="card-body chat-container">
+    <div class="card-body chat-container" #scrollMe>
         <!-- No Messages Placeholder -->
         @if (mesService.messThread().length === 0) {
         <p class="text-center text-muted">No messages found</p>
